apps/haenu/gongik-ars/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gongik-ars-ingress
  namespace: haenu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: twilio.haenu.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gongik-ars
            port:
              number: 3008
